@@ -196,6 +196,25 @@ static void siril_add_debayer_toggle_button(GtkFileChooser *dialog) {
 	g_signal_connect(GTK_TOGGLE_BUTTON(toggle_debayer), "toggled", G_CALLBACK(on_debayer_toggled), (gpointer) main_debayer_button);
 }
 
+static gchar* get_calibration_file_directory(GtkWidget *entry) {
+    if (!GTK_IS_ENTRY(GTK_ENTRY(entry))) {
+        return NULL;
+    }
+
+    // Get the filename from the file chooser button (returns absolute path)
+    const gchar *filename = gtk_entry_get_text(GTK_ENTRY(entry));
+
+    if (!filename || filename[0] == '\0') {
+        // No file selected
+        return g_strdup(com.wd);
+    }
+
+    // Since gtk_file_chooser_get_filename() always returns absolute paths,
+    // we always extract the directory portion
+    gchar *dirname = g_path_get_dirname(filename);
+    return dirname;
+}
+
 static void opendial(int whichdial) {
 	SirilWidget *widgetdialog;
 	GtkFileChooser *dialog = NULL;
@@ -207,20 +226,37 @@ static void opendial(int whichdial) {
 	if (!com.wd)
 		return;
 
+	GtkWidget *entry = NULL;
 	switch (whichdial) {
 	case OD_NULL:
 		fprintf(stderr, "whichdial undefined, should not happen\n");
 		return;
 	case OD_FLAT:
+		if (whichdial == OD_FLAT)
+			entry = lookup_widget("flatname_entry");
 	case OD_DARK:
+		if (whichdial == OD_DARK)
+			entry = lookup_widget("darkname_entry");
 	case OD_OFFSET:
+		if (whichdial == OD_OFFSET)
+			entry = lookup_widget("offsetname_entry");
 	case OD_FLATLIB:
+		if (whichdial == OD_FLATLIB)
+			entry = lookup_widget("flatlib_entry");
 	case OD_DARKLIB:
+		if (whichdial == OD_DARKLIB)
+			entry = lookup_widget("darklib_entry");
 	case OD_OFFSETLIB:
+		if (whichdial == OD_OFFSETLIB)
+			entry = lookup_widget("biaslib_entry");
 	case OD_DISTOLIB:
+		if (whichdial == OD_DISTOLIB)
+			entry = lookup_widget("distolib_entry");
 		widgetdialog = siril_file_chooser_open(control_window, GTK_FILE_CHOOSER_ACTION_OPEN);
 		dialog = GTK_FILE_CHOOSER(widgetdialog);
-		gtk_file_chooser_set_current_folder(dialog, com.wd);
+		gchar *lastdir = get_calibration_file_directory(entry);
+		gtk_file_chooser_set_current_folder(dialog, lastdir);
+		g_free(lastdir);
 		gtk_file_chooser_set_local_only(dialog, FALSE);
 		if (whichdial == OD_FLATLIB) {
 			if (com.pref.prepro.flat_lib != NULL) {
